--- a/ansible/inventory.yml
+++ b/ansible/inventory.yml
@@ -2,7 +2,7 @@ all:
   hosts:
   vars:
     ansible_user: ubuntu
-    ansible_ssh_private_key_file: ~/.ssh/myupgradec2new.cer
+    ansible_ssh_private_key_file: ~/.ssh/upgradec2new.cer
   children:
     bastion:
       hosts:
